# pytrade2-analytics

./: .env.template  .gitignore  .gitmodules  DataTool.py  LowHighRegression MLFlow.ipynb  LowHighRegression feature engineering.ipynb  README.md  download_data.sh  download_raw_data.sh  download_strategy_data.sh  pyproject.toml
data/candles/: 2022-08-12_BTC-USDT_candles_1min.csv  2022-08-13_BTC-USDT_candles_1min.csv  2022-08-14_BTC-USDT_candles_1min.csv  2022-08-15_BTC-USDT_candles_1min.csv  2022-08-16_BTC-USDT_candles_1min.csv  2022-08-17_BTC-USDT_candles_1min.csv  2022-08-18_BTC-USDT_candles_1min.csv  2022-08-19_BTC-USDT_candles_1min.csv  2022-08-20_BTC-USDT_candles_1min.csv  2022-08-21_BTC-USDT_candles_1min.csv  2022-08-22_BTC-USDT_candles_1min.csv  2022-08-23_BTC-USDT_candles_1min.csv  2022-08-24_BTC-USDT_candles_1min.csv  2022-08-25_BTC-USDT_candles_1min.csv  2022-08-26_BTC-USDT_candles_1min.csv  2022-08-27_BTC-USDT_candles_1min.csv  2022-08-28_BTC-USDT_candles_1min.csv  2022-08-29_BTC-USDT_candles_1min.csv  2022-08-30_BTC-USDT_candles_1min.csv  2022-08-31_BTC-USDT_candles_1min.csv  2022-09-01_BTC-USDT_candles_1min.csv  2022-09-02_BTC-USDT_candles_1min.csv  2022-09-03_BTC-USDT_candles_1min.csv  2022-09-04_BTC-USDT_candles_1min.csv  2022-09-05_BTC-USDT_candles_1min.csv  2022-09-06_BTC-USDT_candles_1min.csv  2022-09-07_BTC-USDT_candles_1min.csv  2022-09-08_BTC-USDT_candles_1min.csv  2022-09-09_BTC-USDT_candles_1min.csv  (+627 more)
infra/: .env.template  .gitignore  docker-compose.yml
tools/: DataTool.py  LowHighRegressionTool.py  PlotTool.py  PreprocTool.py
