[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tools", "pytrade2/pytrade2"]

[project]
name = "pytrade2-analytics"
version = "0.1"
dependencies = [
    "ipykernel",
    "python-dotenv",
    "pandas",
    "nbformat>=4.2.0",    
    "plotly",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "requests",
    "urllib3",
    "confluent-kafka",
    #"tensorflow~=2.16.1",
    "keras",
    "numpy",
    "scikeras",
    "scikit-learn",
    "sqlalchemy",
    "huobi-sdk",
    "s3fs",
    "boto3",
    "botocore~=1.37",
    "ta",
    "lightgbm",
    "prometheus-client",
    "flask",
    "mlflow"]
requires-python = ">=3.12"
